[tool.poetry]
name = "dajana"
version = "0.1.0"
description = "a programming language with good UX"
authors = ["malmiteria <malmiteria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
